z-index fix:

--- a/public_html/css/screen.css
+++ b/public_html/css/screen.css
@@ -458,6 +458,7 @@ th {
 
 /* transition: <property> <duration> <timing function> <delay> */
 #menu {
+  z-index: 3;
   position: fixed;
   top: 0;
   left: 0;
@@ -617,7 +618,7 @@ th {
   -o-transition: border-width 0.3s, background-color 0.3s;
   -webkit-transition: border-width 0.3s, background-color 0.3s;
   transition: border-width 0.3s, background-color 0.3s;
-  z-index: 9;
+  z-index: 3;
 }
 #menu.open ul li {
   visibility: visible;
