--- a/public_html/sass/menu/_style.scss
+++ b/public_html/sass/menu/_style.scss
@@ -1,5 +1,6 @@
 /* transition: <property> <duration> <timing function> <delay> */
 #menu {
+	z-index: 3;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -8,7 +9,6 @@
 	border-width: 0px;
 	border-style: solid;
 	border-color: #80858d;
-	// background-color: rgba(0,0,0,0);
 	/* Determines the visibility of an element when it's back is turned. */
 	@include backface-visibility(hidden);
 	@include transition(border-width 0.3s, background-color 0.3s, height 0s 0.3s, z-index 0.3s);
@@ -128,7 +128,7 @@
 	border-width: 0px 0px 50px 120px;
 	// background-color: rgba(0,0,0,1);
 	@include transition(border-width 0.3s, background-color 0.3s);
-	z-index: 9;
+	z-index: 3;
 	ul {
 		li {
 			visibility: visible;
